--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.2",
     "@types/react-router": "^5.1.19",
     "@types/react-router-dom": "^5.3.3",
     "eslint-config-prettier": "^8.5.0",
